--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     <form
         class="datatable__row datatable__row--add"
         method="POST"
-        action="http://afternoon-everglades-73169.herokuapp.com/v1/task/"
+        action="http://afternoon-everglades-73169.herokuapp.com/v1/task"
         data-task-add-form
     >
       <fieldset class="datatable__row-section datatable__row-section--input-section">
